--- a/pokedex/src/components/containMinCards/styles.module.scss
+++ b/pokedex/src/components/containMinCards/styles.module.scss
@@ -14,13 +14,14 @@
 }
 
 .order {
-  margin: 0 5px;
+  margin: 4px 5px;
   padding: 0;
   text-align: end;
+  font-size: 0.5rem;
 }
 
 .imagePokemon {
-  top: calc(50% - 79px);
+  top: calc(50% - 64px);
   margin: 0 auto;
   position: relative;
   padding: 0;
@@ -31,5 +32,6 @@
   padding: 0;
   font-size: 16px;
   position: relative;
-  top: calc(50% - 89px);
+  top: calc(50% - 79px);
+  font-size: 0.625rem;
 }
