add background color white

--- a/pokedex/src/components/searchBar/styles.module.scss
+++ b/pokedex/src/components/searchBar/styles.module.scss
@@ -11,12 +11,14 @@
   border: 1px solid $light-gray;
   border-radius: 8px;
   color: $medium-gray;
+  background-color: $white;
 }
 
 .search {
   border: none;
   width: 100px;
   font-size: 0.625rem;
+  background-color: $white;
 }
 
 .logoSearch {
