--- a/pokedex/src/components/containMinCards/styles.module.scss
+++ b/pokedex/src/components/containMinCards/styles.module.scss
@@ -2,7 +2,8 @@
 
 .containCards {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  margin: 30px 10px;
+  margin: 30px 0;
   gap: 5px;
 }
