--- a/pokedex/src/components/cuadrilla/styles.module.scss
+++ b/pokedex/src/components/cuadrilla/styles.module.scss
@@ -15,6 +15,7 @@
   padding: 0;
   width: 80px;
   background-color: $white;
+  cursor: pointer;
 }
 
 .namePokemon {
@@ -27,6 +28,7 @@
   font-weight: 400;
   color: $white;
   border-radius: 0 0 8px 8px;
+  cursor: pointer;
 }
 .grass {
   width: 105px;
