--- a/pokedex/src/components/bigCard/styles.module.scss
+++ b/pokedex/src/components/bigCard/styles.module.scss
@@ -2,6 +2,8 @@
   background-color: black;
   position: absolute;
   top: 0;
+  z-index: 2;
+  left: 0;
   width: 100vw;
   display: flex;
   justify-content: center;
@@ -50,4 +52,3 @@
 .containInfo {
   width: 350px;
 }
-
