renombro el componente a bigcard

--- a/pokedex/src/components/bigCard/styles.module.scss
+++ b/pokedex/src/components/bigCard/styles.module.scss
@@ -31,7 +31,7 @@
 .containHeader img,
 .containHeader h2 {
   color: white;
-  background-color: transparent;
+  background: transparent;
 }
 
 .containInfo {
