--- a/pokedex/src/components/searchBar/styles.module.scss
+++ b/pokedex/src/components/searchBar/styles.module.scss
@@ -1,6 +1,6 @@
 @import '../../static/colors/colors.module.scss';
 
-.containForm {
+.containerForm {
   height: 24px;
   width: 328px;
   display: grid;
