--- a/pokedex/src/components/bigCard/styles.module.scss
+++ b/pokedex/src/components/bigCard/styles.module.scss
@@ -2,7 +2,7 @@
 
 .bug {
   background-color: $bug;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -14,7 +14,8 @@
   align-items: center;
 }
 
-.bug .progressBar, .bug .type {
+.bug .progressBar,
+.bug .type {
   background-color: $bug;
 }
 
@@ -36,7 +37,7 @@
 }
 
 .containerHeader {
-  position: absolute;
+  position: fixed;
   top: 24px;
   background: transparent;
   width: 100%;
@@ -89,7 +90,7 @@
 
 .dark {
   background-color: $dark;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -101,7 +102,8 @@
   align-items: center;
 }
 
-.dark .progressBar, .dark .type {
+.dark .progressBar,
+.dark .type {
   background-color: $dark;
 }
 
@@ -119,7 +121,7 @@
 
 .dragon {
   background-color: $dragon;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -131,7 +133,8 @@
   align-items: center;
 }
 
-.dragon .progressBar, .dragon .type {
+.dragon .progressBar,
+.dragon .type {
   background-color: $dragon;
 }
 
@@ -144,7 +147,7 @@
 
 .electric {
   background-color: $electric;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -156,7 +159,8 @@
   align-items: center;
 }
 
-.electric .progressBar, .electric .type {
+.electric .progressBar,
+.electric .type {
   background-color: $electric;
 }
 
@@ -169,7 +173,7 @@
 
 .fairy {
   background-color: $fairy;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -181,7 +185,8 @@
   align-items: center;
 }
 
-.fairy .progressBar, .fairy .type {
+.fairy .progressBar,
+.fairy .type {
   background-color: $fairy;
 }
 
@@ -194,7 +199,7 @@
 
 .fighting {
   background-color: $fighting;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -206,7 +211,8 @@
   align-items: center;
 }
 
-.fighting .progressBar, .fighting .type {
+.fighting .progressBar,
+.fighting .type {
   background-color: $fighting;
 }
 
@@ -219,7 +225,7 @@
 
 .fire {
   background-color: $fire;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -231,7 +237,8 @@
   align-items: center;
 }
 
-.fire .progressBar, .fire .type {
+.fire .progressBar,
+.fire .type {
   background-color: $fire;
 }
 
@@ -244,7 +251,7 @@
 
 .flying {
   background-color: $flying;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -256,7 +263,8 @@
   align-items: center;
 }
 
-.flying .progressBar, .flying .type {
+.flying .progressBar,
+.flying .type {
   background-color: $flying;
 }
 
@@ -269,7 +277,7 @@
 
 .ghost {
   background-color: $ghost;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -281,7 +289,8 @@
   align-items: center;
 }
 
-.ghost .progressBar, .ghost .type {
+.ghost .progressBar,
+.ghost .type {
   background-color: $ghost;
 }
 
@@ -294,7 +303,7 @@
 
 .grass {
   background-color: $grass;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -306,7 +315,8 @@
   align-items: center;
 }
 
-.grass .progressBar, .grass .type {
+.grass .progressBar,
+.grass .type {
   background-color: $grass;
 }
 
@@ -319,7 +329,7 @@
 
 .ground {
   background-color: $ground;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -331,7 +341,8 @@
   align-items: center;
 }
 
-.ground .progressBar, .ground .type {
+.ground .progressBar,
+.ground .type {
   background-color: $ground;
 }
 
@@ -344,7 +355,7 @@
 
 .ice {
   background-color: $ice;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -356,7 +367,8 @@
   align-items: center;
 }
 
-.ice .progressBar, .ice .type {
+.ice .progressBar,
+.ice .type {
   background-color: $ice;
 }
 
@@ -369,7 +381,7 @@
 
 .normal {
   background-color: $normal;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -381,7 +393,8 @@
   align-items: center;
 }
 
-.normal .progressBar, .normal .type {
+.normal .progressBar,
+.normal .type {
   background-color: $normal;
 }
 
@@ -394,7 +407,7 @@
 
 .poison {
   background-color: $poison;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -406,7 +419,8 @@
   align-items: center;
 }
 
-.poison .progressBar, .poison .type {
+.poison .progressBar,
+.poison .type {
   background-color: $poison;
 }
 
@@ -427,7 +441,7 @@
 .pokemonImage {
   width: 200px;
   height: 200px;
-  position: absolute;
+  position: fixed;
   top: calc(50% - 260px);
   background: transparent;
 }
@@ -439,7 +453,7 @@
 
 .psychic {
   background-color: $psychic;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -451,7 +465,8 @@
   align-items: center;
 }
 
-.psychic .progressBar, .psychic .type {
+.psychic .progressBar,
+.psychic .type {
   background-color: $psychic;
 }
 
@@ -464,7 +479,7 @@
 
 .rock {
   background-color: $rock;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -476,7 +491,8 @@
   align-items: center;
 }
 
-.rock .progressBar, .rock .type {
+.rock .progressBar,
+.rock .type {
   background-color: $rock;
 }
 
@@ -494,7 +510,7 @@
 
 .steel {
   background-color: $steel;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -506,7 +522,8 @@
   align-items: center;
 }
 
-.steel .progressBar, .steel .type {
+.steel .progressBar,
+.steel .type {
   background-color: $steel;
 }
 
@@ -520,11 +537,13 @@
 .titleAbout {
   position: relative;
   top: 70px;
+  font-size: 1.1rem;
 }
 
 .titleBase {
   position: relative;
   top: 100px;
+  font-size: 1.1rem;
 }
 
 .type {
@@ -535,7 +554,7 @@
 
 .water {
   background-color: $water;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 2;
   left: 0;
@@ -547,7 +566,8 @@
   align-items: center;
 }
 
-.water .progressBar, .water .type {
+.water .progressBar,
+.water .type {
   background-color: $water;
 }
 
@@ -556,4 +576,70 @@
 .water .stat {
   color: $water;
   font-weight: 700;
+}
+
+@media only screen and (min-width: 1000px) {
+  .bug,
+  .dark,
+  .dragon,
+  .electric,
+  .fairy,
+  .fighting,
+  .fire,
+  .flying,
+  .ghost,
+  .grass,
+  .ground,
+  .ice,
+  .normal,
+  .poison,
+  .psychic,
+  .rock,
+  .steel,
+  .water {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .containerAbout {
+    font-size: 0.8rem;
+  }
+
+  .containerHeader {
+    grid-template-columns: 0 975px 84px 0px;
+    left: 4%;
+    font-size: 1.8rem;
+  }
+
+  .containerHeader .arrow {
+    width: 25px;
+    cursor: pointer;
+  }
+
+  .containerStats {
+    font-size: 0.925rem;
+  }
+
+  .pokeball {
+    width: 400px;
+  }
+
+  .pokemonImage {
+    width: 326px;
+    height: 300px;
+    top: calc(50% - 79px);
+    left: 280px;
+  }
+
+  .subTitleAbout {
+    font-size: 0.625rem;
+  }
+
+  .type {
+    font-size: 1.3rem;
+  }
+
+  .titleBase, .titleAbout {
+    font-size: 1.5rem;
+  }
 }
