--- a/pokedex/src/components/styles.module.scss
+++ b/pokedex/src/components/styles.module.scss
@@ -27,3 +27,16 @@
 .title {
   font-size: 1.5rem;
 }
+
+@media only screen and (min-width: 1000px) {
+  .containerHeader {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+  }
+
+  .title {
+    font-size: 1.7rem;
+  }
+}
